--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -8,59 +8,61 @@
 
     <ImageButton
         android:id="@+id/b3"
-        android:layout_width="302dp"
-        android:layout_height="116dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="54dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="123dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="88dp"
+        android:scaleType="fitXY"
+        android:contentDescription="Vector Rotacion"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/b2"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:src="@drawable/vecrotacion" />
 
     <ImageButton
         android:id="@+id/b2"
-        android:layout_width="302dp"
-        android:layout_height="116dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="54dp"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="33dp"
+        android:scaleType="fitXY"
+        android:contentDescription="Giroscopio"
         app:layout_constraintBottom_toTopOf="@+id/b3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/b1"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:src="@drawable/giroscopio" />
 
     <TextView
         android:id="@+id/text_dashboard"
-        android:layout_width="398dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="32dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/b1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/b1"
-        android:layout_width="302dp"
-        android:layout_height="116dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="54dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="33dp"
+        android:scaleType="fitXY"
+        android:contentDescription="Proximidad"
         app:layout_constraintBottom_toTopOf="@+id/b2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:src="@drawable/proximidad" />
 </androidx.constraintlayout.widget.ConstraintLayout>
