--- a/app/src/main/res/layout/activity_proximity_sensor.xml
+++ b/app/src/main/res/layout/activity_proximity_sensor.xml
@@ -10,9 +10,10 @@
         android:id="@+id/botonregresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginStart="139dp"
+        android:layout_marginBottom="50dp"
         android:text="Regresar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
