--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B483ECF8"
     tools:context=".ui.dashboard.DashboardFragment">
 
     <TextView
@@ -15,7 +16,9 @@
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="17dp"
         android:textAlignment="center"
+        android:textIsSelectable="false"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/b1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
