--- a/app/src/main/res/layout/activity_proximity_sensor.xml
+++ b/app/src/main/res/layout/activity_proximity_sensor.xml
@@ -9,46 +9,53 @@
     <Button
         android:id="@+id/btnregresar"
         android:layout_width="192dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="109dp"
-        android:layout_marginTop="519dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="32dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="16dp"
         android:text="Regresar"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="396dp"
-        android:layout_height="401dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="101dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="17dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/btnregresar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt1"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="364dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="23dp"
+        android:layout_width="360dp"
+        android:layout_height="93dp"
+        android:layout_marginStart="22dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginEnd="22dp"
         android:layout_marginBottom="3dp"
         android:text="Acerca tu mano a la cámara frontal"
         android:textColor="#000000"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/txt1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txt1"
+        android:layout_width="141dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="158dp"
+        android:layout_marginEnd="170dp"
+        android:layout_marginBottom="15dp"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
